# Bouncy-Loot-God-Bojacx

./: .gitignore  README.md  zip-it.py
sample-yamls/: basegame-med.yaml  basegame-short.yaml  full-long.yaml  hammerlock.yaml  lilith.yaml  scarlett.yaml  tina.yaml  torgue.yaml
sdk_mods/BouncyLootGod/: __init__.py  archi_data.py  archi_defs.py  challenges.py  chests.py  entrances.py  lookups.py  loot_pools.py  map_modify.py  missions.py  pyproject.toml  rarity.py  traps.py
worlds/borderlands2/: Client.py  Items.py  Options.py  Regions.py  Rules.py  __init__.py  archi_defs.py  archipelago.json
